# excitonic_drift_diffusion

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.txt
include/: DDEquation.h  DDExciton.h  DDGridField.h  DDInputData.h  DDNodeData.h  DT.hh  gen_diss.hh  initial_guess.h  interpolator.h  linearInterpolation.hxx  lsqr.h  rhs.h
src/: gen_diss.cpp  main.cpp
